--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "moment": "^2.14.1",
     "react": "^15.1.0",
     "react-addons-css-transition-group": "^15.1.0",
     "react-dom": "^15.1.0",
