--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,14 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "connect-redis": "^3.1.0",
     "ejs": "^2.4.2",
     "express": "^4.13.4",
+    "express-session": "^1.14.0",
+    "mongoose": "^4.5.9",
     "mqtt": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0",
     "socket.io": "^1.4.6",
     "superagent": "^2.0.0"
   },
