--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,7 @@
     "react": "^15.1.0",
     "react-addons-css-transition-group": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-motion": "^0.4.4",
     "react-redux": "^4.1.0",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.0",
