--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.14.0",
     "mongoose": "^4.5.9",
     "mqtt": "^1.11.0",
+    "node-ipc": "^8.1.1",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
     "socket.io": "^1.4.6",
