--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "webpack-dev-server": "^1.8.2"
   },
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "classnames": "^2.2.5",
     "moment": "^2.14.1",
     "react": "^15.1.0",
@@ -62,6 +63,7 @@
     "react-router-redux": "^4.0.0",
     "redux": "^3.1.1",
     "redux-thunk": "^1.0.3",
+    "reselect": "^3.0.0",
     "socket.io-client": "^1.4.6",
     "superagent": "^2.0.0"
   }
