--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "classnames": "^2.2.5",
+    "d3-hierarchy": "^1.1.4",
     "moment": "^2.14.1",
     "react": "^15.1.0",
     "react-addons-css-transition-group": "^15.1.0",
