--- a/client/package.json
+++ b/client/package.json
@@ -64,6 +64,7 @@
     "react-router-redux": "^4.0.0",
     "redux": "^3.1.1",
     "redux-thunk": "^1.0.3",
+    "reflexbox": "^2.2.3",
     "reselect": "^3.0.0",
     "socket.io-client": "^1.4.6",
     "superagent": "^2.0.0"
