--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "connect-mongostore": "^0.1.4",
+    "connect-redis": "^3.3.0",
     "ejs": "^2.4.2",
     "express": "^4.13.4",
     "express-session": "^1.14.0",
