--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "databox-companion-app-server",
+  "name": "databox-test-server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -7,20 +7,24 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon --exec babel-node server.js",
     "start": "pm2 start server.js --name testapp --interpreter ./node_modules/.bin/babel-node",
-    "dev": "nodemon --exec babel-node server.js 9095"
+    "dev": "nodemon --exec babel-node server.js 9095",
+    "base": "docker build --no-cache -t databox-test-server-base -f Dockerfile.base . && docker tag databox-test-server-base tlodge/databox-test-server-base && docker push tlodge/databox-test-server-base",
+    "build": "webpack --progress",
+    "docker": "docker build --no-cache -t databox-test-server .",
+    "release": "docker tag databox-test-server tlodge/databox-test-server && docker push tlodge/databox-test-server",
+    "deploy": "npm run build && npm run docker && npm run release"
   },
   "author": "Tom Lodge",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.1",
-    "connect-mongostore": "^0.1.4",
     "connect-redis": "^3.3.0",
     "ejs": "^2.4.2",
     "express": "^4.13.4",
     "express-session": "^1.14.0",
     "mongoose": "^4.5.9",
     "mqtt": "^1.11.0",
-    "node-ipc": "^8.1.1",
+    "node-ipc": "^9.1.0",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
     "socket.io": "^1.4.6",
@@ -28,7 +32,10 @@
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
+    "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.9.0",
-    "nodemon": "^1.9.2"
+    "nodemon": "^1.9.2",
+    "webpack": "^3.4.1",
+    "webpack-node-externals": "^1.6.0"
   }
 }
