--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,16 @@
 {
   "name": "webpack-react",
   "version": "0.0.1",
-  "description": "A Webpack template project, configured for ES6 React and SASS",
+  "description": "databox testapp client",
   "main": "index.js",
   "scripts": {
     "start": "http-server -p 3000 .",
-    "build": "NODE_ENV=production webpack --config webpack.prod.config -p",
+    "build": "NODE_ENV=production webpack --config webpack.prod.config -p && cp ./static/*.js ../server/static",
     "watch": "webpack-dev-server --host 0.0.0.0 --port 9090 --hot --progress --colors"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:tlodge/react-redux-template.git"
+    "url": "git@github.com:tlodge/databox-test-app.git"
   },
   "keywords": [
     "webpack",
@@ -48,10 +48,10 @@
     "style-loader": "^0.12.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.9.5",
-    "webpack-dev-server": "^1.8.2"
+    "webpack-dev-server": "^1.8.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4"
   },
   "dependencies": {
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "classnames": "^2.2.5",
     "d3-hierarchy": "^1.1.4",
     "moment": "^2.14.1",
