--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.4.2",
     "express": "^4.13.4",
+    "json-socket": "^0.3.0",
     "mqtt": "^1.11.0",
     "node-ipc": "^9.1.0",
     "socket.io": "^1.4.6",
